--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-# Core modules (mandatory)
-jupyterlite-core==0.3.0
-jupyterlab~=4.1.6
-notebook~=7.1.2
+# core package for building the JupyterLite website
+jupyterlite-core==0.1.0b19
+# the Python kernel powered by Pyodide
+jupyterlite-pyodide-kernel==0.0.5
+# dependency for indexing the content
+jupyterlab~=3.5.3
 
 
 # Python kernel (optional)
