--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # core package for building the JupyterLite website
-jupyterlite-core==0.1.0b19
+jupyterlite-core==0.1.0
 # the Python kernel powered by Pyodide
 jupyterlite-pyodide-kernel==0.0.5
 # dependency for indexing the content
 jupyterlab~=3.5.3
-jupyterlite-ruby-kernel==0.1.9
+jupyterlite-xeus==0.1.8
