--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ jupyterlite-pyodide-kernel==0.0.5
 # dependency for indexing the content
 jupyterlab~=3.5.3
 jupyterlab-open-url-parameter==0.3.0
+ipywidgets==7.7.0
