--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           python -m pip install -r requirements.txt
           python -m pip install jupyterlab-open-url-parameter
           python -m pip install healpy
-          python -m pip install jupyter-lab-night
+          python -m pip install jupyterlab-night
       - name: Build the JupyterLite site
         run: |
           cp README.md content
