--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
         run: |
           python -m pip install -r requirements.txt
           python -m pip install jupyterlab-open-url-parameter
+          python import micropip
+          import micropip
           python -m pip install jupyterlab-night
       - name: Build the JupyterLite site
         run: |
