--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           python -m pip install -r requirements.txt
           python -m pip install jupyterlab-open-url-parameter
           python -m pip install jupyterlab-night
-          python -m pip pip install nbconvert
+          python -m pip install nbconvert
           jupyter nbconvert --to script SettingUpNotebook.ipynb
           python SettingUpNotebook.py
       - name: Build the JupyterLite site
