--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           python -m pip install -r requirements.txt
           python -m pip install jupyterlab-open-url-parameter
           python -m pip install jupyterlab-night
-          python -m pip download --only-binary :all: --dist . --no-cache healpy-0.1.dev1885+g71d9336-py3-none-any.whl
+          python -m pip download --only-binary :all: --dest content --no-cache healpy-0.1.dev1885+g71d9336-py3-none-any.whl
       - name: Build the JupyterLite site
         run: |
           cp README.md content
