--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-# core package for building the JupyterLite website
-jupyterlite-core==0.1.0b19
-# the Python kernel powered by Pyodide
-jupyterlite-pyodide-kernel==0.0.5
-# dependency for indexing the content
-jupyterlab~=4.2.3
-ipywidgets==7.7.0
+# Core modules (mandatory)
+jupyterlite-core==0.3.0
+jupyterlab~=4.1.6
+notebook~=7.1.2
+
+
+# Python kernel (optional)
+jupyterlite-pyodide-kernel==0.3.2
+
+# JavaScript kernel (optional)
+jupyterlite-javascript-kernel==0.3.0
